add buttons to html and layout with grid

--- a/index.html
+++ b/index.html
@@ -13,7 +13,28 @@
     <h1>Odin Calculator</h1>
   </header>
   <main>
-    <p id="test"></p>
+    <div class="calc-body">
+      <div class="calc-display row1">1500</div>
+      <div class="calc-btns">
+        <button class="col1 col-end3 row1">C</button>
+        <button class="col4 row1">/</button>
+        <button class="col1 row2">7</button>
+        <button class="col2 row2">8</button>
+        <button class="col3 row2">9</button>
+        <button class="col4 row2">*</button>
+        <button class="col1 row3">4</button>
+        <button class="col2 row3">5</button>
+        <button class="col3 row3">6</button>
+        <button class="col4 row3">+</button>
+        <button class="col1 row4">1</button>
+        <button class="col2 row4">2</button>
+        <button class="col3 row4">3</button>
+        <button class="col4 row4">+</button>
+        <button class="col1 col-end3 row5">0</button>
+        <button class="col3 row5">.</button>
+        <button class="col4 row5">=</button>
+      </div>
+    </div>
   </main>
 </body>
 </html>
