add styling to calculator

--- a/index.html
+++ b/index.html
@@ -14,9 +14,9 @@
   </header>
   <main>
     <div class="calc-body">
-      <div class="calc-display row1">1500</div>
+      <div class="calc-display">1500</div>
       <div class="calc-btns">
-        <button class="col1 col-end3 row1">C</button>
+        <button class="col1 row1">C</button>
         <button class="col4 row1">/</button>
         <button class="col1 row2">7</button>
         <button class="col2 row2">8</button>
