add mathematical symbols and some styling to buttons

--- a/index.html
+++ b/index.html
@@ -17,15 +17,15 @@
       <div class="calc-display">01134</div>
       <div class="calc-btns">
         <button class="col1 row1">C</button>
-        <button class="col4 row1">/</button>
+        <button class="col4 row1">&divide;</button>
         <button class="col1 row2">7</button>
         <button class="col2 row2">8</button>
         <button class="col3 row2">9</button>
-        <button class="col4 row2">*</button>
+        <button class="col4 row2">&times;</button>
         <button class="col1 row3">4</button>
         <button class="col2 row3">5</button>
         <button class="col3 row3">6</button>
-        <button class="col4 row3">+</button>
+        <button class="col4 row3">&minus;</button>
         <button class="col1 row4">1</button>
         <button class="col2 row4">2</button>
         <button class="col3 row4">3</button>
