change how updateDisplay works via a switch statement

--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
         <button class="col1 row4">1</button>
         <button class="col2 row4">2</button>
         <button class="col3 row4">3</button>
-        <button class="col4 row4">+</button>
+        <button class="col4 row4">&plus;</button>
         <button class="col1 col-end3 row5">0</button>
         <button class="col3 row5">.</button>
         <button class="col4 row5">=</button>
