--- a/index.html
+++ b/index.html
@@ -16,23 +16,23 @@
     <div class="calc-body">
       <div class="calc-display">01134</div>
       <div class="calc-btns">
-        <button class="col1 row1">C</button>
-        <button class="col4 row1">&divide;</button>
-        <button class="col1 row2">7</button>
-        <button class="col2 row2">8</button>
-        <button class="col3 row2">9</button>
-        <button class="col4 row2">&times;</button>
-        <button class="col1 row3">4</button>
-        <button class="col2 row3">5</button>
-        <button class="col3 row3">6</button>
-        <button class="col4 row3">&minus;</button>
-        <button class="col1 row4">1</button>
-        <button class="col2 row4">2</button>
-        <button class="col3 row4">3</button>
-        <button class="col4 row4">&plus;</button>
-        <button class="col1 col-end3 row5">0</button>
-        <button class="col3 row5">.</button>
-        <button class="col4 row5">=</button>
+        <button class="col1 row1" value="C">C</button>
+        <button class="col4 row1" value="divide">&divide;</button>
+        <button class="col1 row2" value="7">7</button>
+        <button class="col2 row2" value="8">8</button>
+        <button class="col3 row2" value="9">9</button>
+        <button class="col4 row2" value="multiply">&times;</button>
+        <button class="col1 row3" value="4">4</button>
+        <button class="col2 row3" value="5">5</button>
+        <button class="col3 row3" value="6">6</button>
+        <button class="col4 row3" value="subtract">&minus;</button>
+        <button class="col1 row4" value="1">1</button>
+        <button class="col2 row4" value="2">2</button>
+        <button class="col3 row4" value="3">3</button>
+        <button class="col4 row4" value="add">&plus;</button>
+        <button class="col1 col-end3 row5" value="0">0</button>
+        <button class="col3 row5" value=".">.</button>
+        <button class="col4 row5" value="equal">=</button>
       </div>
     </div>
   </main>
