add Backspace button

--- a/index.html
+++ b/index.html
@@ -17,6 +17,7 @@
       <div class="calc-display">01134</div>
       <div class="calc-btns">
         <button class="col1 row1" value="C">C</button>
+        <button class="col2 row1" value="Backspace"></button>
         <button class="col4 row1" value="divide">&divide;</button>
         <button class="col1 row2" value="7">7</button>
         <button class="col2 row2" value="8">8</button>
